Updated some law code with post-Java 8 features. Simplified TranscriptPdfParser, and added some additional corrections.